; ModuleID = '/home/carl/AnghaBench/phpredis/extr_redis_array_impl.c_ra_del_key.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_redis_array_impl.c_ra_del_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@MULTI = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"DEL\00", align 1
@redis_ce = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32*)* @ra_del_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ra_del_key(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [1 x i32], align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* @MULTI, align 4
  %12 = call i32 @ra_index_multi(i32* %10, i32 %11)
  %13 = call i32 @ZVAL_STRINGL(i32* %7, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 3)
  %14 = getelementptr inbounds [1 x i32], [1 x i32]* %9, i64 0, i64 0
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @ZVAL_STRINGL(i32* %14, i8* %15, i32 %16)
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @redis_ce, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32*, i32** %6, align 8
  %21 = getelementptr inbounds [1 x i32], [1 x i32]* %9, i64 0, i64 0
  %22 = call i32 @ra_call_user_function(i32* %19, i32* %20, i32* %7, i32* %8, i32 1, i32* %21)
  %23 = call i32 @zval_dtor(i32* %7)
  %24 = getelementptr inbounds [1 x i32], [1 x i32]* %9, i64 0, i64 0
  %25 = call i32 @zval_dtor(i32* %24)
  %26 = call i32 @zval_dtor(i32* %8)
  %27 = load i32*, i32** %6, align 8
  %28 = load i8*, i8** %4, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @ra_remove_from_index(i32* %27, i8* %28, i32 %29)
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @ra_index_exec(i32* %31, i32* null, i32 0)
  ret i32 1
}

declare dso_local i32 @ra_index_multi(i32*, i32) #1

declare dso_local i32 @ZVAL_STRINGL(i32*, i8*, i32) #1

declare dso_local i32 @ra_call_user_function(i32*, i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @zval_dtor(i32*) #1

declare dso_local i32 @ra_remove_from_index(i32*, i8*, i32) #1

declare dso_local i32 @ra_index_exec(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
